Add language resources to MainLayout in Scheduling.BlazorClient.Client #5

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/MainLayout.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Shared/MainLayout.razor
@@ -34,14 +34,14 @@
         <ChildContent>
             <RadzenPanelMenu>
                 <ChildContent>
-                    <RadzenPanelMenuItem Icon="home" Path="home" Text="Home"></RadzenPanelMenuItem>
-                    <RadzenPanelMenuItem Icon="event" Path="appointments" Text="Appointments"></RadzenPanelMenuItem>
-                    <RadzenPanelMenuItem Icon="widgets" Path="appointmenttypes" Text="Appointment Types"></RadzenPanelMenuItem>
-                    <RadzenPanelMenuItem Icon="people_alt" Path="clients" Text="Clients"></RadzenPanelMenuItem>
-                    <RadzenPanelMenuItem Icon="store" Path="clinics" Text="Clinics"></RadzenPanelMenuItem>
-                    <RadzenPanelMenuItem Icon="face" Path="doctors" Text="Doctors"></RadzenPanelMenuItem>
-                    <RadzenPanelMenuItem Icon="pets" Path="patients" Text="Patients"></RadzenPanelMenuItem>
-                    <RadzenPanelMenuItem Icon="meeting_room" Path="rooms" Text="Rooms"></RadzenPanelMenuItem>
+                    <RadzenPanelMenuItem Icon="home" Path="home" Text=@StringLocalizer["MainLayout_Menu_Home"]></RadzenPanelMenuItem>
+                    <RadzenPanelMenuItem Icon="event" Path="appointments" Text=@StringLocalizer["MainLayout_Menu_Appointments"]></RadzenPanelMenuItem>
+                    <RadzenPanelMenuItem Icon="widgets" Path="appointmenttypes" Text=@StringLocalizer["MainLayout_Menu_AppointmentTypes"]></RadzenPanelMenuItem>
+                    <RadzenPanelMenuItem Icon="people_alt" Path="clients" Text=@StringLocalizer["MainLayout_Menu_Clients"]></RadzenPanelMenuItem>
+                    <RadzenPanelMenuItem Icon="store" Path="clinics" Text=@StringLocalizer["MainLayout_Menu_Clinics"]></RadzenPanelMenuItem>
+                    <RadzenPanelMenuItem Icon="face" Path="doctors" Text=@StringLocalizer["MainLayout_Menu_Doctors"]></RadzenPanelMenuItem>
+                    <RadzenPanelMenuItem Icon="pets" Path="patients" Text=@StringLocalizer["MainLayout_Menu_Patients"]></RadzenPanelMenuItem>
+                    <RadzenPanelMenuItem Icon="meeting_room" Path="rooms" Text=@StringLocalizer["MainLayout_Menu_Rooms"]></RadzenPanelMenuItem>
                 </ChildContent>
             </RadzenPanelMenu>
         </ChildContent>
