Add suffix Component to each filter page on each module in Scheduling.BlazorClient.Client #5

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Doctors/DoctorsFilter.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Doctors/DoctorsFilter.razor
@@ -1,3 +1,5 @@
+@inherits Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Pages.Doctors.DoctorsFilterComponent
+
 <div class="container">
     <div class="row mb-3">
         <RadzenText
