--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/AppointmentTypes/AppointmentTypesFilter.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/AppointmentTypes/AppointmentTypesFilter.razor
@@ -1,3 +1,5 @@
+@inherits Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Pages.AppointmentTypes.AppointmentTypesFilterComponent
+
 <div class="container">
     <div class="row mb-3">
         <RadzenText
