--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Clinics/ClinicsFilter.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Clinics/ClinicsFilter.razor
@@ -1,3 +1,5 @@
+@inherits Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client.Pages.Clinics.ClinicsFilterComponent
+
 <div class="container">
     <div class="row mb-3">
         <RadzenText
